Curve draw tool's cursor depth mode use a random Z value when viewport camera is orthographic #101347

Closed
opened 2022-09-25 05:40:47 +02:00 by Zhen Dai · 8 comments

System Information
Operating system: macOS-12.5.1-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics OpenGL Engine Intel Inc. 4.1 INTEL-18.8.4

Blender Version
Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: 0759f671ce
Worked: N/A

Short description of error

When drawing a curve at Top view, using Cursor Depth mode, my expectation is for a spline to appear at XY plane, at cursor's world space Z position; but what actually happens is a spline on XY plane with a random Z value, this issue happens when my viewport camera is in orthographic mode.

I wasn't able to reproduce this issue immediately with a new blend file, but it does fail in my uploaded blend file example, and I have experienced this many times in recent usage, suggesting some unrelated settings might have trigger this problem.

(If this is by design, the manual page need to go much deeper explaining this behavior, I certainly couldn't figure out how it works myself via googling.)

Screen Shot 2022-09-25 at 11.28.34.png

Screen Shot 2022-09-25 at 11.28.44.png

Exact steps for others to reproduce the error

draw-curve-bug.blend

  • Download attached file, go to Top view and try to draw splines in orthographic view and perspective view respectively, and observe the spline has a random Z value when drawing in orthographic mode, while perspective mode gives you a spline at Z = 0 correctly.
**System Information** Operating system: macOS-12.5.1-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics OpenGL Engine Intel Inc. 4.1 INTEL-18.8.4 **Blender Version** Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: `0759f671ce` Worked: N/A **Short description of error** When drawing a curve at Top view, using Cursor Depth mode, my expectation is for a spline to appear at XY plane, at cursor's world space Z position; but what actually happens is a spline on XY plane with a random Z value, this issue happens when my viewport camera is in orthographic mode. I wasn't able to reproduce this issue immediately with a new blend file, but it does fail in my uploaded blend file example, and I have experienced this many times in recent usage, suggesting some unrelated settings might have trigger this problem. (If this is by design, [the manual page ](https://docs.blender.org/manual/en/3.3/modeling/curves/tools/draw.html) need to go much deeper explaining this behavior, I certainly couldn't figure out how it works myself via googling.) ![Screen Shot 2022-09-25 at 11.28.34.png](https://archive.blender.org/developer/F13567124/Screen_Shot_2022-09-25_at_11.28.34.png) ![Screen Shot 2022-09-25 at 11.28.44.png](https://archive.blender.org/developer/F13567122/Screen_Shot_2022-09-25_at_11.28.44.png) **Exact steps for others to reproduce the error** [draw-curve-bug.blend](https://archive.blender.org/developer/F13567042/draw-curve-bug.blend) - Download attached file, go to Top view and try to draw splines in orthographic view and perspective view respectively, and observe the spline has a random Z value when drawing in orthographic mode, while perspective mode gives you a spline at Z = 0 correctly.

Added subscriber: @Zhen-Dai

Added subscriber: @Zhen-Dai

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the problem.
Apparently the problem is because ED_view3d_win_to_3d_on_plane doesn't work properly when the do_clip option is true and the view is orthographic.


(Tagging @ideasman42 as the operator was introduced in 8ac662c77a)

I can confirm the problem. Apparently the problem is because `ED_view3d_win_to_3d_on_plane` doesn't work properly when the `do_clip` option is `true` and the view is orthographic. --- (Tagging @ideasman42 as the operator was introduced in 8ac662c77a)

@mano-wii Is there a way to disable do_clip option that you mentioned here? I would like to use cursor depth mode because surface mode cause my geoemetry to z-fight with the surface draw on.

@mano-wii Is there a way to disable `do_clip` option that you mentioned here? I would like to use cursor depth mode because surface mode cause my geoemetry to z-fight with the surface draw on.

This issue was referenced by 93bbaad2f8

This issue was referenced by 93bbaad2f8dfaf5a141e79c5e976fd16226ef4af

This issue was referenced by 2004827bc9

This issue was referenced by 2004827bc990708117548c77337af13603efb37a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-09-30 10:30:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101347
There is no content yet.